새로운 로직 작성